Update Readme & change folder structure